<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehiclemodel</name>
  <version>2.0.0</version>
  <description>This package is an upgrade to ROS1 version provided 
  by Dr. De Castro: https://github.com/rpintodecastro/RoboticVehicles2023 
  </description>
  <maintainer email="mehradmortazavi@gmail.com">mehradmrt</maintainer>
  <license> N/A </license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <build_depend>rosidl_default_generators</build_depend>   -->

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>vehicle_msg</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




